# UOEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Generate.bat  GenerateProjectFiles.bat  LICENSE  Nuget.Config  README.md  UOEngine.sln  UOEngine.slnx
.github/workflows/: build.yml
CMake/: UOEngine.cmake  Win64.cmake
Shaders/: ImGui.frag  ImGui.vert  PerInstanceData.hlsl  TexturedQuadPS.hlsl  TexturedQuadVS.hlsl  compile.bat  simple.frag  simple.vert
Source/: Directory.Build.Props  Directory.Build.props
Source/Apps/Client/: Program.cs  SimpleShader.cs  UOEngine.Apps.Client.csproj
Source/Developer/UOEngine.Developer.RenderDoc/: RenderDoc.cs  RenderDocNative.cs  RenderDocPlugin.cs  UOEngine.Developer.RenderDoc.csproj
Source/Editor/UOEngine.Client/: ClientPlugin.cs  IClient.cs  UOEngine.Client.csproj
Source/Editor/UOEngine.Editor/: Chunk.cs  EditorPlugin.cs  LandEntity.cs  MapEntity.cs  Program.cs  UO3DApplication.cs  UOEngine.Editor.csproj
Source/Editor/UOEngine.Editor.Abstractions/: IEditorTool.cs  UOEngine.Editor.Abstractions.csproj
Source/Editor/UOEngine.Editor.CentrEDSharp/: CentrEDSharpPlugin.cs  CentredSharpTool.cs  CentredSharpView.axaml  CentredSharpView.axaml.cs  HostedCentrEDGame.cs  UOEngine.Editor.CentrEDSharp.csproj
Source/Editor/UOEngine.Editor.UI/: DelegateCommand.cs  EditorUIPlugin.cs  UOEngine.Editor.UI.csproj
Source/Editor/UOEngine.Server/: ServerPlugin.cs  UOEngine.Server.csproj
Source/Game/: CMakeLists.txt  Editor.cs  Game.cs  IUOEngineApp.cs  Main.cs  NativeMethods.cs  RenderContext.cs  Texture2D.cs  UOEngine.csproj
Source/Game/Properties/: launchSettings.json
Source/Game/UOEngine.Core/: CameraEntity.cs  Colour.cs  Game.cs  IEntity.cs  Matrix4x4.cs  RenderBuffer.cs  RenderComponent.cs  RenderContext.cs  Shader.cs  ShaderInstance.cs  Texture2D.cs  UOEngine.Core.csproj  Window.cs
Source/Game/UOEngine.Editor/: Chunk.cs  Colour.cs  Editor.cs  EntityManager.cs  Game.cs  IEntity.cs  IUOEngineApp.cs  LandEntity.cs  Main.cs  MapEntity.cs  NativeMethods.cs  RenderComponent.cs  RenderContext.cs  Texture2D.cs  UOEngine.Editor.csproj
Source/Game/UOEngine.Interop/: RenderContextNative.cs  RendererInterop.cs  UOEngine.Interop.csproj
Source/Game/UOEngine.PackageFile/: BwtDecompress.cs  IUOAssetDeserialiser.cs  UOFileIndex.cs  UOPackageFile.cs
Source/Game/UOEngine.Renderer/: Debug.cs  RenderContext.cs  Scene.cs  Shader.cs  ShaderInstance.cs  Texture2D.cs  TextureCache.cs  UOEngine.Renderer.csproj
Source/Game/UOEngine.Ultima.Assets/: HuesHelper.cs  Map.cs  UOAssetLoader.cs  UOBitmap.cs  UOEngine.UOAssets.csproj
Source/Plugins/UOEngine.CUO/: CUOClient.cs  CUOPlugin.cs  Patches.cs  UOEngine.CUO.csproj
Source/Runtime/Core/: Alignment.h  Assert.h  CMakeLists.txt  Core.cpp  Crc32.cs  Debug.cpp  Debug.h  Deserialiser.cs  EventLoop.cs  FileReader.cpp  FileReader.h  GameLoop.cs  IPlugin.cs  ITickable.cs  Input.cs  NonCopyable.h  Paths.cs  Program.cs  TComPtr.h  Timer.cpp  Timer.h  Types.h  UOE.cs  UOEngine.Runtime.Core.csproj  UOEngine.cs  Window.cs
Source/Runtime/D3D12RHI/: CMakeLists.txt  D3D12PipelineStream.h  D3D12RenderResourceFactory.h  D3D12RenderTargetView.h  DescriptorAllocator.cpp  GpuDescriptorAllocator.cpp  GpuDescriptorAllocator.h  RenderBuffer.cpp  RenderBuffer.h  RenderCommandAllocator.cpp  RenderCommandList.cpp  RenderCommandList.h  RenderCommandListManager.cpp  RenderCommandListManager.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderFence.h  RenderSwapChain.cpp  RenderSwapChain.h  RenderTexture.cpp  RenderTexture.h  RenderTextureAllocator.cpp  RenderTextureAllocator.h  RenderUploadBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderInstance.cpp  ShaderInstance.h
Source/Runtime/DotNet/: CMakeLists.txt  DotNet.cpp  DotNet.h
Source/Runtime/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineGlobals.cpp  EngineGlobals.h  EnginePlugin.cs  UOEngine.Runtime.Engine.csproj  Window.cpp  Window.h
Source/Runtime/EntityComponentSystem/: Archetype.cs  ArchetypeRecord.cs  Component.cs  ComponentRegistry.cs  Entity.cs  EntityComponentSystemPlugin.cs  EntityPool.cs  EntityRecord.cs  Signature.cs  UOEngine.Runtime.EntityComponentSystem.csproj  World.cs
Source/Runtime/LivePP/: CMakeLists.txt  LivePP.cpp  LivePP.h
Source/Runtime/Main/: CMakeLists.txt  Win32Main.cpp
Source/Runtime/Math/: Vector2D.cs
Source/Runtime/Memory/: Allocator.cpp  Allocator.h  CMakeLists.txt  Memory.cpp  Memory.h  MemoryAllocator.cpp  MemoryAllocator.h
Source/Runtime/NativeInterop/: CMakeLists.txt  EngineInterop.cpp  EngineInterop.h  NativeWindow.cpp  NativeWindow.h  RenderBufferNative.cpp  RenderBufferNative.h  RenderContextNative.cpp  RenderContextNative.h  RendererInterop.cpp  RendererInterop.h  ShaderInstanceNative.cpp  ShaderInstanceNative.h
Source/Runtime/RHI/: CMakeLists.txt  IRHI.h  IRHIResourceFactory.h
Source/Runtime/Renderer/: CMakeLists.txt  D3D12PipelineStream.h  D3D12RenderTargetView.h  D3D12Resource.h  DescriptorAllocator.cpp  DescriptorAllocator.h  GpuDescriptorAllocator.cpp  GpuDescriptorAllocator.h  RenderBuffer.cpp  RenderBuffer.h  RenderCommandAllocator.cpp  RenderCommandAllocator.h  RenderCommandList.cpp  RenderCommandList.h  RenderCommandListManager.cpp  RenderCommandListManager.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderSwapChain.cpp  RenderSwapChain.h  RenderTexture.cpp  RenderTexture.h  RenderTextureAllocator.cpp  RenderTextureAllocator.h  RenderUploadBuffer.cpp  (+9 more)
Source/Shaders/: FullscreenTrianglePS.hlsl  FullscreenTriangleVS.hlsl  TexturedQuadPS.hlsl  TexturedQuadVS.hlsl
Source/UOEngine.Client/: ClientPlugin.cs
Source/UOEngine.Plugin/: IPlugin.cs
Source/UOEngine.Renderer/: RendererPlugin.cs
Source/UOEngine.Runtime/: Application.cs  UOEngine.Runtime.csproj  Window.cs
Source/UOEngine.Server/: ServerPlugin.cs  UOEngine.Server.csproj
Source/UOEngine.UI/: UIPlugin.cs  UOEngine.UI.csproj
Source/UOEngine2/: Program.cs  UOEngine.Editor.csproj
(+446 files in other folders)
